// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute trades endpoint should return error 1`] = `
{
  "errorMessage": "Kaiko returned price of 0 for LTC/ETH",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute trades endpoint should return success 1`] = `
{
  "data": {
    "result": 4097.271668358277,
  },
  "result": 4097.271668358277,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;
